# tvb-hpc

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit  .travis.yml  .untravis.yml  .ycm_extra_conf.py  .zenodo.json  CMakeLists.txt  Dockerfile  LICENSE.header  Makefile  README.md  activate  activate-julia  api_docs.html  configure  genindex.html  getting_started.html  index.html  main.cpp  make-env.sh  metrics-use.txt  metrics.txt  modules.html  network.c  numba_kernel.py  objects.inv  parsweep.py  profile.sh  py-modindex.html  requirements-dev.txt  requirements.txt  run.bat  scratch.py  search.html  searchindex.js  setup.cfg  setup.py  (+5 more)
NeuroML/: README.md
Random123/: index.html
_modules/: index.html
_sources/: getting_started.rst.txt  index.rst.txt  modules.rst.txt  tvb_hpc.rst.txt
api-docs/: modules.html  tvb_hpc.aligned.html  tvb_hpc.bold.html  tvb_hpc.codegen.base.html  tvb_hpc.codegen.cfun.html  tvb_hpc.codegen.html  tvb_hpc.codegen.literal.html  tvb_hpc.codegen.metric.html  tvb_hpc.codegen.model.html  tvb_hpc.codegen.network.html  tvb_hpc.compiler.html  tvb_hpc.coupling.html  tvb_hpc.descriptors.html  tvb_hpc.html  tvb_hpc.model.html  tvb_hpc.network.html  tvb_hpc.rng.html  tvb_hpc.schemes.html  tvb_hpc.tests.html  tvb_hpc.utils.html
docs/: .gitignore  AutomaticGenerationNMM.tex  DiagramNMM.eps  Makefile  api_docs.rst  build-gh-pages.sh  conf.py  make.bat  references.bib  tutorial.rst  user_guide.rst
dsl_cuda/: LEMS2CUDA.py  README.md  tmpl8_CUDA.py
env/: amd_sdk.sh  make-env.sh  update-develop-packages.sh
examples/: btest.py  hackathon.py  hcp100.py  progressive_knl.py  sep645.py  sim515k.py
phase_plane_interactive/: ppi.py  (+14 more)
(+191 files in other folders)
